--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index Page</title>
     <link rel="stylesheet" href="css/main.scss" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Oregano"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header class="header">
+      <div class="header__logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+      </div>
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Rustica</span>
+          <span class="heading-primary--sub">Bio und Fair seit 1991</span>
+        </h1>
+        <a href="#" class="btn btn--white btn--animated">Zum Shop</a>
+      </div>
+    </header>
     <main>
-      <a href="./my-subpage/index.html">Link to Subpage</a>
       <div>Home</div>
     </main>
     <script src="js/index.js"></script>
