--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,16 @@
           </div>
         </div>
       </section>
+      <section class="section-map">
+        <div class="heading-secondary__push">
+          <h2 class="heading-secondary u-margin-bottom-xsmall">Komm vorbei!</h2>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1162.9130110443957!2d10.121215656727165!3d54.342383107338435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b2560c4923d5c7%3A0xca5dbbc0c523e4f!2sFraunhoferstra%C3%9Fe%2014%2C%2024118%20Kiel!5e0!3m2!1sde!2sde!4v1610018852395!5m2!1sde!2sde"
+          class="map"
+        ></iframe>
+        >
+      </section>
     </main>
     <script src="js/index.js"></script>
   </body>
