--- a/src/index.html
+++ b/src/index.html
@@ -57,10 +57,62 @@
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1162.9130110443957!2d10.121215656727165!3d54.342383107338435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b2560c4923d5c7%3A0xca5dbbc0c523e4f!2sFraunhoferstra%C3%9Fe%2014%2C%2024118%20Kiel!5e0!3m2!1sde!2sde!4v1610018852395!5m2!1sde!2sde"
           class="map"
+          tabindex="0"
         ></iframe>
         >
       </section>
+
+      <section class="section-footer">
+        <div class="row">
+          <div class="col-1-of-2">
+            <p class="footer__logo-box">
+              <img
+                src="logo/Logo.svg"
+                alt="Logo"
+                class="footer__logo icon_filter--white"
+              />
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1-of-4">
+            <h3 class="heading-tertiary--main">Rustica</h3>
+            <h3 class="heading-tertiary--sub">Rösterei & Café</h3>
+          </div>
+          <div class="col-1-of-4">
+            <p class="paragraph__white u-margin-bottom-medium">
+              <span class="paragraph__white--footer"> Komm uns besuchen!</span>
+              <span class="paragraph__white--footer"
+                >Fraunhoferstr. 13, Kiel</span
+              >
+            </p>
+            <p class="paragraph__white">
+              <span class="paragraph__white--footer">Mo – Fr 8–18 Uhr </span>
+              <span class="paragraph__white--footer">Sa 11–18 Uhr</span>
+            </p>
+          </div>
+          <div class="col-1-of-4">
+            <div class="link">
+              <div class="link__footer">
+                <a href="#" class="link__footer--white">Café</a>
+                <a href="#" class="link__footer--white">Shop</a>
+                <a href="#" class="link__footer--white">Herkunft</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="link">
+              <div class="link__footer">
+                <a href="#" class="link__footer--white">Datenschutz</a>
+                <a href="#" class="link__footer--white">Impressum</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
     <script src="js/index.js"></script>
   </body>
 </html>
