--- a/src/index.html
+++ b/src/index.html
@@ -31,25 +31,77 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="row">
-          <div class="col-1-of-2">
-            <h2 class="heading-secondary u-margin-bottom-big">
-              Rösterei & Café
-            </h2>
-            <p class="paragraph">
-              Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
-              Rösterei, serviert im gemütlichen Café in der Innenstadt.
-            </p>
+        <div class="info u-margin-bottom-big">
+          <div class="row">
+            <div class="col-1-of-2">
+              <h2 class="heading-secondary u-margin-bottom-big">
+                Rösterei & Café
+              </h2>
+              <p class="paragraph u-margin-bottom-medium">
+                Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
+                Rösterei, serviert im gemütlichen Café in der Innenstadt.
+              </p>
+              <div class="row">
+                <div class="col-1-of-2">
+                  <p class="paragraph">
+                    <span class="paragraph__anthrazit--block"
+                      >Komm vorbei!</span
+                    >
+                    <span class="paragraph__anthrazit--block"
+                      >Fraunhoferstr. 13, Kiel</span
+                    >
+                  </p>
+                </div>
+                <div class="col-1-of-2">
+                  <p class="paragraph">
+                    <span class="paragraph__anthrazit--block"
+                      >Mo – Fr 8–18 Uhr</span
+                    >
+                    <span class="paragraph__anthrazit--block"
+                      >Sa 11–18 Uhr</span
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-1-of-2">
+              <img
+                src="img/FEND-Coffee-shop.png"
+                alt="coffee shop inside"
+                class="section-about_image crop__center"
+              />
+            </div>
           </div>
-          <div class="col-1-of-2">
-            <img
-              src="img/FEND-Coffee-shop.png"
-              alt="coffee shop inside"
-              class="section-about_image"
-            />
+        </div>
+
+        <div class="info">
+          <div class="row">
+            <div class="col-1-of-2">
+              <img
+                src="img/FEND-coffee-plant.png"
+                alt="coffee shop inside"
+                class="section-about_image crop__center"
+              />
+            </div>
+
+            <div class="col-1-of-2">
+              <div class="info-push">
+                <h2 class="heading-secondary u-margin-bottom-big">
+                  Bio und Fair
+                </h2>
+                <p class="paragraph">
+                  Weit hinten, hinter den Wortbergen, fern der Länder Vokalien
+                  und Konsonantien leben die Blindtexte. Weit hinten, hinter den
+                  Wortbergen, fern der Länder Vokalien und Konsonantien leben
+                  die Blindtexte. Und das alles in bester Bio Qualität
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+
       <section class="section-map">
         <div class="heading-secondary__push">
           <h2 class="heading-secondary u-margin-bottom-xsmall">Komm vorbei!</h2>
@@ -81,14 +133,14 @@
           </div>
           <div class="col-1-of-4">
             <p class="paragraph__white u-margin-bottom-medium">
-              <span class="paragraph__white--footer"> Komm uns besuchen!</span>
-              <span class="paragraph__white--footer"
+              <span class="paragraph__white--block"> Komm uns besuchen!</span>
+              <span class="paragraph__white--block"
                 >Fraunhoferstr. 13, Kiel</span
               >
             </p>
             <p class="paragraph__white">
-              <span class="paragraph__white--footer">Mo – Fr 8–18 Uhr </span>
-              <span class="paragraph__white--footer">Sa 11–18 Uhr</span>
+              <span class="paragraph__white--block">Mo – Fr 8–18 Uhr </span>
+              <span class="paragraph__white--block">Sa 11–18 Uhr</span>
             </p>
           </div>
           <div class="col-1-of-4">
