--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,6 @@
                 </div>
               </div>
             </div>
-
             <div class="col-1-of-2">
               <img
                 src="img/FEND-Coffee-shop.png"
@@ -74,7 +73,6 @@
             </div>
           </div>
         </div>
-
         <div class="info">
           <div class="row">
             <div class="col-1-of-2">
@@ -84,7 +82,6 @@
                 class="section-about_image crop__center"
               />
             </div>
-
             <div class="col-1-of-2">
               <div class="info-push">
                 <h2 class="heading-secondary u-margin-bottom-big">
@@ -99,6 +96,20 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="origin">
+        <div class="origin__text-box">
+          <h3 class="heading-tertiary">
+            <span class="heading-tertiary--main">Herkunft</span>
+          </h3>
+          <p class="paragraph__white u-margin-bottom-medium">
+            Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und
+            Konsonantien leben die Blindtexte. Und das alles in bester Bio
+            Qualität.
+          </p>
+          <a href="#" class="link__origin--white">mehr</a>
         </div>
       </section>
 
@@ -152,7 +163,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-1-of-4">
             <div class="link">
               <div class="link__footer">
