--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index Page</title>
+    <meta
+      name="description"
+      content="Rustica ist eine Kaffee-Rösterei mit angeschlossenem Café. 
+      Hier wird der Kaffee seit 1991, fair und bio, direkt im Herzen von Kiel produziert."
+    />
+    <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
+    <title>Rustica Rösterei & Café</title>
     <link rel="stylesheet" href="css/main.scss" />
-    <link rel="shortcut icon" type="image/png" href="logo/Favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="logo/Logo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
