--- a/src/index.html
+++ b/src/index.html
@@ -105,8 +105,49 @@
         </div>
       </section>
 
-      <section class="origin">
-        <div class="origin__text-box">
+      <section class="section-explore">
+        <h2 class="heading-test push">Entdecke unsere Kaffee Sorten</h2>
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="background-color">
+              <img
+                src="img/FEND_Coffee_Costa-Rica 2.png"
+                alt="coffee bag type Costa Rica"
+                class="image__explore u-margin-bottom-medium"
+              />
+            </div>
+            <p class="description__white">Costa Rica</p>
+            <p class="description__grey u-margin-bottom-small">
+              6,90€ – 26,90€
+            </p>
+
+            <div class="col-1-of-3 u-margin-bottom-big">
+              <img
+                src="logo/Logo.svg"
+                alt="Logo"
+                class="header__logo icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-3">
+              <img
+                src="logo/Logo.svg"
+                alt="Logo"
+                class="header__logo icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-3">
+              <img
+                src="logo/Logo.svg"
+                alt="Logo"
+                class="header__logo icon_filter--white"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-origin">
+        <div class="section-origin__text-box">
           <h3 class="heading-tertiary">
             <span class="heading-tertiary--main">Herkunft</span>
           </h3>
