--- a/src/index.html
+++ b/src/index.html
@@ -121,25 +121,130 @@
               6,90€ – 26,90€
             </p>
 
-            <div class="col-1-of-3 u-margin-bottom-big">
+            <div class="col-1-of-8 u-margin-bottom-big">
               <img
-                src="logo/Logo.svg"
-                alt="Logo"
-                class="header__logo icon_filter--white"
+                src="icn/coffeebones.svg"
+                alt="Icon Coffeebones"
+                class="icon__explore icon_filter--white"
               />
             </div>
-            <div class="col-1-of-3">
+            <div class="col-1-of-8">
               <img
-                src="logo/Logo.svg"
-                alt="Logo"
-                class="header__logo icon_filter--white"
+                src="icn/frenchpress.svg"
+                alt="Icon Frenchpress"
+                class="icon__explore icon_filter--white"
               />
             </div>
-            <div class="col-1-of-3">
+            <div class="col-1-of-8">
               <img
-                src="logo/Logo.svg"
-                alt="Logo"
-                class="header__logo icon_filter--white"
+                src="icn/handcrafted.svg"
+                alt="Icon Handcrafted"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="background-color">
+              <img
+                src="img/FEND_Coffee_Costa-Rica 2.png"
+                alt="coffee bag type Äthiopia"
+                class="image__explore u-margin-bottom-medium"
+              />
+            </div>
+            <p class="description__white">Äthiopien</p>
+            <p class="description__grey u-margin-bottom-small">
+              6,90€ – 26,90€
+            </p>
+
+            <div class="col-1-of-8 u-margin-bottom-big">
+              <img
+                src="icn/coffeebones.svg"
+                alt="Icon Coffeebones"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/frenchpress.svg"
+                alt="Icon Frenchpress"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/handcrafted.svg"
+                alt="Icon Handcrafted"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="background-color">
+              <img
+                src="img/FEND_Coffee_Costa-Rica 2.png"
+                alt="coffee bag type Costa Rica"
+                class="image__explore u-margin-bottom-medium"
+              />
+            </div>
+            <p class="description__white">Costa Rica</p>
+            <p class="description__grey u-margin-bottom-small">
+              6,90€ – 26,90€
+            </p>
+
+            <div class="col-1-of-8 u-margin-bottom-big">
+              <img
+                src="icn/coffeebones.svg"
+                alt="Icon Coffeebones"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/frenchpress.svg"
+                alt="Icon Frenchpress"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/handcrafted.svg"
+                alt="Icon Handcrafted"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="background-color">
+              <img
+                src="img/FEND_Coffee_Costa-Rica 2.png"
+                alt="coffee bag type Äthiopia"
+                class="image__explore u-margin-bottom-medium"
+              />
+            </div>
+            <p class="description__white">Äthiopien</p>
+            <p class="description__grey u-margin-bottom-small">
+              6,90€ – 26,90€
+            </p>
+
+            <div class="col-1-of-8">
+              <img
+                src="icn/coffeebones.svg"
+                alt="Icon Coffeebones"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/frenchpress.svg"
+                alt="Icon Frenchpress"
+                class="icon__explore icon_filter--white"
+              />
+            </div>
+            <div class="col-1-of-8">
+              <img
+                src="icn/handcrafted.svg"
+                alt="Icon Handcrafted"
+                class="icon__explore icon_filter--white"
               />
             </div>
           </div>
