add explore button

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,8 @@
       </section>
 
       <section class="section-explore">
-        <h2 class="heading-test push">Entdecke unsere Kaffee Sorten</h2>
+        <h2 class="heading-test push">Entdecke unsere</h2>
+        <h2 class="heading-test push">Kaffee Sorten</h2>
         <div class="row">
           <div class="col-1-of-4">
             <div class="background-color">
@@ -249,6 +250,12 @@
             </div>
           </div>
         </div>
+
+        <a
+          href="#"
+          class="btn-secondary btn-secondary--border btn-secondary--animated"
+          >alle Produkte</a
+        >
       </section>
 
       <section class="section-origin">
