fix button style

--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,7 @@
 
         <a
           href="#"
-          class="btn-secondary btn-secondary--border btn-secondary--animated"
+          class="btn-secondary btn-secondary--border btn-secondary--animated btn__center"
           >alle Produkte</a
         >
       </section>
