fix details add incredients

--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,7 @@
 
         <a
           href="#"
-          class="btn-secondary btn-secondary--border btn-secondary--animated btn__center"
+          class="btn-secondary btn-secondary--border btn-secondary--animated btn__center u-margin-bottom-big"
           >alle Produkte</a
         >
       </section>
@@ -269,6 +269,73 @@
             Qualität.
           </p>
           <a href="#" class="link__origin--white">mehr</a>
+        </div>
+      </section>
+
+      <section class="section-incredients">
+        <div class="section-incredients__text-box">
+          <div class="heading-secondary">
+            <h2 class="heading-secondary u-margin-bottom-big">
+              Das steckt drin
+            </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <img
+              src="img/FEND_Coffee_Costa-Rica 2.png"
+              alt="coffee bag type Äthiopia"
+              class="image__explore u-margin-bottom-medium"
+            />
+          </div>
+          <div class="col-1-of-2">
+            <div class="row">
+              <div class="col-1-of-2">
+                <img
+                  src="icn/Icon Kaffee Tasse.svg"
+                  alt="Icon Cup of Coffee"
+                  class="icon__explore icon_filter--anthrazit"
+                />
+              </div>
+              <div class="col-1-of-2">
+                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                  Bester <br />
+                  Geschmack
+                </p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-1-of-2">
+                <img
+                  src="icn/Icon Kaffee Tasse.svg"
+                  alt="Icon Cup of Coffee"
+                  class="icon__explore icon_filter--anthrazit"
+                />
+              </div>
+              <div class="col-1-of-2">
+                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                  Fair <br />Gehandelt
+                </p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-1-of-2">
+                <img
+                  src="icn/Icon-Kaffee Pflanze.svg"
+                  alt="Icon Coffee Plant"
+                  class="icon__explore icon_filter--anthrazit"
+                />
+              </div>
+              <div class="col-1-of-2">
+                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                  Bio <br />Qualität
+                </p>
+              </div>
+            </div>
+            <a href="#" class="btn btn--anthrazit btn--animated">zum Shop</a>
+          </div>
         </div>
       </section>
 
