--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,23 @@
     />
   </head>
   <body>
-    <header class="header">
-      <div class="header__logo-box">
-        <img
-          src="logo/Logo.svg"
-          alt="Logo"
-          class="header__logo icon_filter--white"
-        />
+    <nav class="nav">
+      <div>
+        <div class="header__logo-box">
+          <img
+            src="logo/Logo.svg"
+            alt="Logo"
+            class="header__logo icon_filter--white"
+          />
+        </div>
+        <div>
+          <a class="nav-menu" href="my-subpage/cafe.html">das Café</a>
+          <a class="nav-menu" href="my-subpage/origin.html">Herkunft</a>
+          <a class="nav-menu" href="my-subpage/shop.html">Shop</a>
+        </div>
       </div>
+    </nav>
+    <header class="header">
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Rustica</span>
