--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subpage</title>
+    <title>Rustica Rösterei & Café: Das Café</title>
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
