--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="nav">
-      <div>
+      <div class="nav-overall">
         <div class="header__logo-box">
           <img
             src="logo/Logo.svg"
@@ -28,7 +28,7 @@
             class="header__logo icon_filter--white"
           />
         </div>
-        <div>
+        <div class="nav-line">
           <a class="nav-menu" href="my-subpage/cafe.html">das Café</a>
           <a class="nav-menu" href="my-subpage/origin.html">Herkunft</a>
           <a class="nav-menu" href="my-subpage/shop.html">Shop</a>
@@ -410,6 +410,6 @@
       </section>
     </main>
 
-    <script src="js/index.js"></script>
+    <script src="js/navigation.js"></script>
   </body>
 </html>
