add functions to nav

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,15 @@
           />
         </div>
         <div class="nav-line">
-          <a class="nav-menu" href="my-subpage/cafe.html">das Café</a>
-          <a class="nav-menu" href="my-subpage/origin.html">Herkunft</a>
-          <a class="nav-menu" href="my-subpage/shop.html">Shop</a>
+          <a class="nav-menu link-underline" href="my-subpage/cafe.html"
+            >das Café</a
+          >
+          <a class="nav-menu link-underline" href="my-subpage/origin.html"
+            >Herkunft</a
+          >
+          <a class="nav-menu link-underline" href="my-subpage/shop.html"
+            >Shop</a
+          >
         </div>
       </div>
     </nav>
@@ -410,6 +416,6 @@
       </section>
     </main>
 
-    <script src="js/navigation.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
