--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,13 @@
     <nav class="nav">
       <div class="nav-overall">
         <div class="header__logo-box">
-          <img
-            src="logo/Logo.svg"
-            alt="Logo"
-            class="header__logo icon_filter--white"
-          />
+          <a href="index.html">
+            <img
+              src="logo/Logo.svg"
+              alt="Logo"
+              class="header__logo icon_filter--white"
+            />
+          </a>
         </div>
         <div class="nav-line">
           <a class="nav-menu link-underline" href="my-subpage/cafe.html"
