--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -10,11 +10,12 @@
     <nav class="nav">
       <div class="nav-overall">
         <div class="header__logo-box">
-          <img
-            src="../logo/Logo.svg"
-            alt="Logo"
-            class="header__logo icon_filter--white"
-          />
+          <a href="../index.html">
+            <img
+              src="../logo/Logo.svg"
+              alt="Logo"
+              class="header__logo icon_filter--white"
+          /></a>
         </div>
         <div class="nav-line">
           <a class="nav-menu link-underline" href="cafe.html">das Café</a>
@@ -75,7 +76,7 @@
             <h2 class="heading-secondary u-margin-bottom-big">
               Frisches Gebäck von nebenan
             </h2>
-            <p class="paragraph">
+            <p class="paragraph u-margin-bottom-big">
               Als es die ersten Hügel des Kursivgebirges erklommen hatte, warf
               es einen letzten Blick zurück auf die Skyline seiner Heimatstadt
               Buchstabhausen, die Headline von Alphabetdorf. Wehmütig lief ihm
@@ -86,6 +87,55 @@
               Wort "und" und das Blindtextchen solle umkehren und wieder in sein
               eigenes, sicheres Land zurückkehren.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-gallery">
+        <div class="row">
+          <div class="col-1-of-4">
+            <img
+              src="../img/FEND-danish 1.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image u-margin-bottom-gallery"
+            /><img
+              src="../img/FEND-Coffee-sign.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image"
+            />
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="../img/FEND-Coffee-latte-art-2.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image u-margin-bottom-gallery"
+            /><img
+              src="../img/FEND-Coffee-latte-art-3.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image"
+            />
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="../img/FEND-Coffee-machine.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image u-margin-bottom-gallery"
+            /><img
+              src="../img/FEND-Coffee-latte-art.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image"
+            />
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="../img/FEND-coffee-list.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image u-margin-bottom-gallery"
+            /><img
+              src="../img/FEND-coffee-breakfast 1.png"
+              alt="coffee machine"
+              class="section-gallery gallery-image"
+            />
           </div>
         </div>
       </section>
