fix problems menu

--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -17,11 +17,17 @@
               class="header__logo icon_filter--white"
           /></a>
         </div>
-        <div class="nav-line">
-          <a class="nav-menu link-underline" href="cafe.html">das Café</a>
-          <a class="nav-menu link-underline" href="origin.html">Herkunft</a>
-          <a class="nav-menu link-underline" href="shop.html">Shop</a>
-        </div>
+        <ul class="nav-line">
+          <li class="nav-menu">
+            <a class="link-underlined" href="cafe.html">das Café</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underline" href="origin.html">Herkunft</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underline" href="shop.html">Shop</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <header class="header-cafe">
