--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,17 @@
             />
           </a>
         </div>
-        <div class="nav-line">
-          <a class="nav-menu link-underline" href="my-subpage/cafe.html"
-            >das Café</a
-          >
-          <a class="nav-menu link-underline" href="my-subpage/origin.html"
-            >Herkunft</a
-          >
-          <a class="nav-menu link-underline" href="my-subpage/shop.html"
-            >Shop</a
-          >
-        </div>
+        <ul class="nav-line">
+          <li class="nav-menu">
+            <a class="link-underline" href="my-subpage/cafe.html">das Café</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underline" href="my-subpage/origin.html">Herkunft</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underline" href="my-subpage/shop.html">Shop</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <header class="header">
