--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -200,7 +200,7 @@
             <div class="link">
               <div class="link__footer">
                 <a href="#" class="link__footer--white">Datenschutz</a>
-                <a href="#" class="link__footer--white">Impressum</a>
+                <a href="imprint.html" class="link__footer--white">Impressum</a>
               </div>
             </div>
           </div>
