--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,7 @@
               src="logo/Logo.svg"
               alt="Logo"
               class="header__logo icon_filter--white"
-            />
-          </a>
+          /></a>
         </div>
         <ul class="nav-line">
           <li class="nav-menu">
@@ -315,7 +314,9 @@
                 />
               </div>
               <div class="col-1-of-2">
-                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                <p
+                  class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
+                >
                   Bester <br />
                   Geschmack
                 </p>
@@ -331,7 +332,9 @@
                 />
               </div>
               <div class="col-1-of-2">
-                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                <p
+                  class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
+                >
                   Fair <br />Gehandelt
                 </p>
               </div>
@@ -346,7 +349,9 @@
                 />
               </div>
               <div class="col-1-of-2">
-                <p class="paragraph__anthrazit line u-margin-bottom-medium">
+                <p
+                  class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
+                >
                   Bio <br />Qualität
                 </p>
               </div>
@@ -410,7 +415,9 @@
             <div class="link">
               <div class="link__footer">
                 <a href="#" class="link__footer--white">Datenschutz</a>
-                <a href="#" class="link__footer--white">Impressum</a>
+                <a href="my-subpage/imprint.html" class="link__footer--white"
+                  >Impressum</a
+                >
               </div>
             </div>
           </div>
@@ -418,6 +425,6 @@
       </section>
     </main>
 
-    <script src="js/index.js"></script>
+    <script src="js/navbar.js"></script>
   </body>
 </html>
