fix black nav imprint

--- a/src/my-subpage/imprint.html
+++ b/src/my-subpage/imprint.html
@@ -14,7 +14,7 @@
             <img
               src="../logo/Logo.svg"
               alt="Logo"
-              class="header__logo icon_filter--white"
+              class="header__logo icon_filter--black"
           /></a>
         </div>
         <ul class="nav-line">
@@ -38,7 +38,11 @@
         <div class="row">
           <div class="col-1-of-2">
             <p class="footer__logo-box">
-              <img src="../logo/LogoB.svg" alt="Logo" class="footer__logo" />
+              <img
+                src="../logo/Logo.svg"
+                alt="Logo"
+                class="footer__logo icon_filter--white"
+              />
             </p>
           </div>
         </div>
