--- a/src/index.html
+++ b/src/index.html
@@ -296,24 +296,24 @@
             </h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-1-of-2">
+        <div class="Orow">
+          <div class="Ocol-1-of-2">
             <img
               src="img/FEND_Coffee_Costa-Rica 2.png"
               alt="coffee bag type Äthiopia"
               class="image__explore u-margin-bottom-medium"
             />
           </div>
-          <div class="col-1-of-2">
-            <div class="row">
-              <div class="col-1-of-2">
+          <div class="Ocol-1-of-2">
+            <div class="Orow">
+              <div class="Ocol-1-of-2">
                 <img
                   src="icn/Icon Kaffee Tasse.svg"
                   alt="Icon Cup of Coffee"
                   class="icon__explore icon_filter--anthrazit"
                 />
               </div>
-              <div class="col-1-of-2">
+              <div class="Ocol-1-of-2">
                 <p
                   class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                 >
@@ -323,15 +323,15 @@
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-1-of-2">
+            <div class="Orow">
+              <div class="Ocol-1-of-2">
                 <img
                   src="icn/Icon Kaffee Tasse.svg"
                   alt="Icon Cup of Coffee"
                   class="icon__explore icon_filter--anthrazit"
                 />
               </div>
-              <div class="col-1-of-2">
+              <div class="Ocol-1-of-2">
                 <p
                   class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                 >
@@ -340,15 +340,15 @@
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-1-of-2">
+            <div class="Orow">
+              <div class="Ocol-1-of-2">
                 <img
                   src="icn/Icon-Kaffee Pflanze.svg"
                   alt="Icon Coffee Plant"
                   class="icon__explore icon_filter--anthrazit"
                 />
               </div>
-              <div class="col-1-of-2">
+              <div class="Ocol-1-of-2">
                 <p
                   class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                 >
@@ -374,8 +374,8 @@
       </section>
 
       <section class="section-footer">
-        <div class="row">
-          <div class="col-1-of-2">
+        <div class="Frow">
+          <div class="Fcol-1-of-2">
             <p class="footer__logo-box">
               <img
                 src="logo/Logo.svg"
@@ -385,12 +385,12 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-1-of-4">
+        <div class="Frow">
+          <div class="Fcol-1-of-4">
             <h3 class="heading-tertiary--main">Rustica</h3>
             <h3 class="heading-tertiary--sub">Rösterei & Café</h3>
           </div>
-          <div class="col-1-of-4">
+          <div class="Fcol-1-of-4">
             <p class="paragraph__white u-margin-bottom-medium">
               <span class="paragraph__white--block"> Komm uns besuchen!</span>
               <span class="paragraph__white--block"
@@ -402,7 +402,7 @@
               <span class="paragraph__white--block">Sa 11–18 Uhr</span>
             </p>
           </div>
-          <div class="col-1-of-4">
+          <div class="Fcol-1-of-4">
             <div class="link">
               <div class="link__footer">
                 <a href="#" class="link__footer--white">Café</a>
@@ -411,7 +411,7 @@
               </div>
             </div>
           </div>
-          <div class="col-1-of-4">
+          <div class="Fcol-1-of-4">
             <div class="link">
               <div class="link__footer">
                 <a href="#" class="link__footer--white">Datenschutz</a>
